# tibot

./: README.md  tibot.code-workspace
gazebo_house/: CMakeLists.txt  package.xml
gazebo_house/launch/: house.launch
get_map_data/: CMakeLists.txt  package.xml
get_map_data/launch/: get_map_data.launch
get_map_data/src/: call_map_service.py
maps/: my_map.pgm
navigation_system/: CMakeLists.txt  package.xml
navigation_system/launch/: navigation_system.launch
navigation_system/rviz/: navigation_system_config.rviz
provide_map/: CMakeLists.txt  package.xml
provide_map/launch/: provide_map.launch
tibot/: CMakeLists.txt  package.xml
tibot_navigation_system/: CMakeLists.txt  package.xml  setup.py
tibot_navigation_system/include/: explore.h
tibot_navigation_system/launch/: tibot_amcl.launch  tibot_gazebo_map.launch  tibot_navigation_system.launch  tibot_navigation_system_explore.launch  tibot_navigation_system_real.launch
tibot_navigation_system/maps/: my_map.pgm
tibot_navigation_system/param/: costmap_common_params_burger.yaml
tibot_navigation_system/rviz/: navigation_system_config.rviz  tibot_navigation_system_config.rviz
tibot_navigation_system/src/: call_map_service.py  explore.cpp  fsm.py  move_fixed_pos_service.py  sm_hide_and_seek.py
tibot_navigation_system/src/cpp/: explore.cpp
tibot_navigation_system/src/py/: call_map_service.py  figure.py  figure_game_service.py  move_fixed_pos_service.py  play_voice_service.py  voice.py
tibot_navigation_system/srv/: AutomaticExploration.srv  FigureMsg.srv  MoveFixedPosMsg.srv  VoiceMsg.srv
tibot_navigation_system/test/: move_fixed_pos_service.test  run_tests_move_fixed_pos_service.py  tests_move_fixed_pos_service.py
tibot_navigation_system/worlds/: house.world
tibot_prediction/: CMakeLists.txt  package.xml
tibot_sound_play/scripts/: soundplay_node.py
