<?xml version="1.0"?>
<package format="2">
  <name>provide_map</name>
  <version>0.0.0</version>
  <description>The provide_map package</description>

  <maintainer email="masope6@epsg.upv.es">María</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
