<?xml version="1.0"?>
<package format="2">
  <name>tibot_navigation_system</name>
  <version>0.0.0</version>
  <description>The tibot_navigation_system package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="adsona1@epsg.edu.es">Adrian</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>nonames-developers</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>


  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>
  <depend>actionlib</depend>

  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>