<?xml version="1.0"?>
<package format="2">
  <name>tibot_navigation_system</name>
  <version>0.0.0</version>
  <description>The tibot_navigation_system package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="adsona1@epsg.edu.es">Adrian</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>nonames-developers</license>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>smach_ros</depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
